Blockquote and word spacing fixed in bio section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -541,14 +541,31 @@ img {
 /******************************************
     Start Bio Section
 ******************************************/
-.author-img {
-  float: left;
+.author-img-wrap {
+  float:left;
+  width: 29%;
   margin-top: 0;
-  margin-bottom: 1em;
-  width: 28%;
-  padding: 0.5em;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.author-img {
+  margin: 0 auto;
+  width: 90%;
   border-radius: 1em;
   border: 3px solid $main-content-border-color;
+}
+
+.blockquote {
+  padding: 0;
+  margin-top: 0.5em;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-left: auto;
+  font-family: 'Roboto';
+  font-size: 1.1em;
+  font-weight: 900;
+  font-style: italic;
 }
 
 .bio-text {
@@ -557,22 +574,6 @@ img {
   margin-bottom: 0.5em;
   padding-right: 0.5em;
   width: 70%;
-}
-.start-quotation-span {
-  margin-left: -25px;
-}
-
-.blockquote {
-  float: left;
-  //clear: left;
-  margin-left: 1em;
-  margin-right: 0;
-  padding-right: 0;
-  width: 25%;
-  font-family: 'Roboto';
-  font-size: 1.1em;
-  font-weight: 900;
-  font-style: italic;
 }
 
 .second-p {
@@ -584,12 +585,18 @@ img {
   width: 70%;
   margin-top: 0;
   padding-top: 0;
-
 }
 
+.fourth-p {
+  clear: both;
+  width: 100%;
+}
+
+
 .tabs {
+  float: right;
   margin: 0;
-  padding: 0;
+  padding-right: 5em;
 }
 
 .tabs li:nth-child(2) {
